# MobilenetSSD_caffe

./: README.md
MobilenetSSD_APP_demo/: local.properties
MobilenetSSD_APP_demo/app/: build.gradle
MobilenetSSD_APP_demo/app/src/main/: AndroidManifest.xml
MobilenetSSD_APP_demo/app/src/main/java/com/mobilenet/ssd/caffe_jni/: CaffeMobile.java
MobilenetSSD_APP_demo/app/src/main/java/com/mobilenet/ssd/demo/: CNNListener.java  MainActivity.java
MobilenetSSD_APP_demo/app/src/main/res/values/: strings.xml
MobilenetSSD_APP_demo/gradle/wrapper/: gradle-wrapper.properties
classify_caffe/: CMakeLists.txt  build.sh  classify.sh
classify_caffe/model/: file_list.txt
classify_caffe/result/: out.txt
classify_caffe/src/: classify_main.cpp  ssd_detect.cpp  ssd_detect.hpp
mobilenet_caffe_train/example/voc/: MobileNetSSD_test.prototxt  MobileNetSSD_train.prototxt  solver_test.prototxt  solver_train.prototxt
mobilenet_caffe_train/tool/: demo.py  merge_bn.py  test.sh  train.sh
